--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@
      </div>
     </div><!-- Footer -->
     <footer class="text-center text-white mt-10 opacity-75">
-     <p>© 2024 Ramalan Lengkap Jawa. Dibuat dengan ❤️</p>
+     <p>© 2024 Ramalan Lengkap Jawa. Dibuat dengan ❤️ djgtry</p>
     </footer>
    </div>
   </div>
