--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
   <div id="app" class="h-full w-full overflow-auto gradient-bg">
    <div class="w-full max-w-4xl mx-auto p-6">
     <header class="text-center mb-8 pt-6">
-     <h1 id="mainTitle" class="text-white text-5xl font-bold mb-3">🌙 Ramalan Lengkap Jawa</h1>
+     <h1 id="mainTitle" class="text-white text-5xl font-bold mb-3">🌙 Ramalan Lengkap By Dj</h1>
      <p id="subtitle" class="text-white text-xl opacity-90">Shio, Unsur, Zodiak, Hari Pasaran Jawa, Tanggal Hijriah &amp; Numerologi Nama</p>
     </header><!-- Menu Pilihan -->
     <div id="menuPage" class="card">
